Change Send Button Friends to ImageView and experiment with color

--- a/App/FEKC/app/src/main/res/layout/app_bar_nav.xml
+++ b/App/FEKC/app/src/main/res/layout/app_bar_nav.xml
@@ -44,8 +44,8 @@
         android:id="@+id/app_bar_nav_floating_action_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
+        android:layout_marginTop="490dp"
+        android:layout_marginLeft="285dp"
         android:tint="@color/colorWhite"
         android:src="@drawable/ic_add" />
 
