--- a/App/FEKC/app/src/main/res/values/colors.xml
+++ b/App/FEKC/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#257ac6</color>
+    <color name="colorPrimaryDark">#1e5687</color>
+    <color name="colorAccent">#089c28</color>
 
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorOverlay">#99000000</color>
