--- a/App/FEKC/app/src/main/res/values/colors.xml
+++ b/App/FEKC/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorOverlay">#99000000</color>
 
+    <color name="colorOrange">#FF9800</color>
+
 </resources>
