--- a/App/FEKC/app/src/main/res/layout/task_view_row.xml
+++ b/App/FEKC/app/src/main/res/layout/task_view_row.xml
@@ -18,6 +18,21 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             >
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_arrow_drop_down_black_24dp"
+                android:id="@+id/dropdown_icon"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_delete_black_24dp"
+                android:id="@+id/delete_icon"
+                android:layout_toLeftOf="@id/dropdown_icon"
+                android:layout_alignParentTop="true" />
+
 
             <ImageView
                 android:layout_width="wrap_content"
