--- a/App/FEKC/app/src/main/res/layout/custom_toolbar.xml
+++ b/App/FEKC/app/src/main/res/layout/custom_toolbar.xml
@@ -5,6 +5,14 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="F E K C"
+        android:textSize="22sp"
+        android:paddingLeft="10dp"
+        android:textColor="@color/colorWhite"/>
+
     <ImageView
         android:id="@+id/custom_toolbar_home"
         android:layout_width="25dp"
