--- a/App/FEKC/app/src/main/res/layout/user_list_row.xml
+++ b/App/FEKC/app/src/main/res/layout/user_list_row.xml
@@ -49,7 +49,8 @@
                 android:layout_marginRight="@dimen/list_item_horizontal_margin"
                 android:layout_gravity="center"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:visibility="invisible"/>
 
             <CheckBox
                 android:id="@+id/user_list_row_selected_checkbox"
