--- a/App/FEKC/app/src/main/res/layout/user_row_layout.xml
+++ b/App/FEKC/app/src/main/res/layout/user_row_layout.xml
@@ -6,8 +6,8 @@
     <de.hdodenhof.circleimageview.CircleImageView
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/user_row_layout_image_view"
-        android:layout_width="@dimen/list_view_image_width"
-        android:layout_height="@dimen/list_view_image_height"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_margin="5dp"
         app:civ_border_width="2dp"
         app:civ_border_color="#11000000"/>
