--- a/App/FEKC/app/src/main/res/layout/fragment_stats.xml
+++ b/App/FEKC/app/src/main/res/layout/fragment_stats.xml
@@ -1,15 +1,30 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.shiv.fekc.fragment.StatsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="YOLO"
-        android:textSize="40dp"
-        android:layout_marginLeft="120dp"/>
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin">
 
-</FrameLayout>
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:id="@+id/fragment_stats_spinner" />
+
+    <com.github.mikephil.charting.charts.BarChart
+        android:layout_below="@+id/fragment_stats_spinner"
+        android:id="@+id/fragment_stats_bar_chart"
+        android:layout_marginBottom="70dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    </RelativeLayout>
+
+</LinearLayout>
