Updated stats screen fragment

--- a/App/FEKC/app/src/main/res/layout/add_task_nav_header.xml
+++ b/App/FEKC/app/src/main/res/layout/add_task_nav_header.xml
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="25dp"
         android:layout_marginRight="@dimen/toolbar_horizontal_margin"
-        android:text="SAVE"
+        android:text="REVIEW"
         android:textSize="15dp"
         android:layout_centerVertical="true"
         android:textColor="@color/colorWhite"
