--- a/App/FEKC/app/src/main/res/menu/nav.xml
+++ b/App/FEKC/app/src/main/res/menu/nav.xml
@@ -2,8 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/custom_toolbar_chart"
+        android:title="Search Apps"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:icon="@drawable/ic_pie_chart_outlined"
+        app:showAsAction="ifRoom"
+        />
 </menu>
