--- a/App/FEKC/app/src/main/res/layout/app_bar_nav.xml
+++ b/App/FEKC/app/src/main/res/layout/app_bar_nav.xml
@@ -7,38 +7,50 @@
     android:fitsSystemWindows="true"
     tools:context="com.example.shiv.fekc.activity.NavActivity">
 
-    <android.support.design.widget.AppBarLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/app_bar_nav_home_toolbar"
+        android:layout_height="match_parent">
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay">
+            android:layout_height="wrap_content"
+            android:id="@+id/Main_Nav_Bar">
+            <android.support.design.widget.AppBarLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:theme="@style/AppTheme.AppBarOverlay">
 
-            <include layout="@layout/custom_toolbar" />
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/app_bar_nav_home_toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:background="?attr/colorPrimary"
+                    app:popupTheme="@style/AppTheme.PopupOverlay">
 
-        </android.support.v7.widget.Toolbar>
+                    <include layout="@layout/custom_toolbar" />
 
-        <android.support.design.widget.TabLayout
-            android:id="@+id/app_bar_nav_tab_layout"
+                </android.support.v7.widget.Toolbar>
+
+                <android.support.design.widget.TabLayout
+                    android:id="@+id/app_bar_nav_tab_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/custom_tab_layout_height"
+                    app:tabGravity="fill"
+                    app:tabMode="fixed" />
+
+            </android.support.design.widget.AppBarLayout>
+        </RelativeLayout>
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/custom_tab_layout_height"
-            app:tabGravity="fill"
-            app:tabMode="fixed" />
-
-    </android.support.design.widget.AppBarLayout>
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/app_bar_nav_viewpager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
-    <!--<include layout="@layout/content_nav" />-->
+            android:layout_height="match_parent"
+            android:layout_below="@id/Main_Nav_Bar">
+            <android.support.v4.view.ViewPager
+                android:id="@+id/app_bar_nav_viewpager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        </RelativeLayout>
+    </RelativeLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/app_bar_nav_floating_action_button"
@@ -48,5 +60,8 @@
         android:layout_margin="@dimen/fab_margin"
         android:tint="@color/colorWhite"
         android:src="@drawable/ic_add" />
+    <!--<include layout="@layout/content_nav" />-->
+
+
 
 </android.support.design.widget.CoordinatorLayout>
