--- a/App/FEKC/app/src/main/res/layout/tracked_friends_row.xml
+++ b/App/FEKC/app/src/main/res/layout/tracked_friends_row.xml
@@ -134,15 +134,30 @@
 
                 </LinearLayout>
 
-                <TextView
-                    android:id="@+id/tracked_friends_apps_view"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tracked_friends_row_message_linear_layout"
-                    android:layout_marginTop="20dp"
-                    android:text="Apps"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/tracked_friends_apps_view"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:text="Apps"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+
+                    <view
+                        android:layout_marginTop="10dp"
+                        android:id="@+id/tracked_friends_row_app_recycler_view"
+                        class="android.support.v7.widget.RecyclerView"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_centerInParent="true" />
+
+                </LinearLayout>
 
             </RelativeLayout>
 
