--- a/App/FEKC/app/src/main/res/layout/warning_message_row.xml
+++ b/App/FEKC/app/src/main/res/layout/warning_message_row.xml
@@ -1,44 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/user_shiv"
     android:layout_height="wrap_content"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:orientation="horizontal"
-    android:paddingTop="5dp"
-    android:paddingBottom="5dp">
-
+    android:layout_marginTop="5dp"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp"
+    android:layout_marginBottom="5dp">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:id="@+id/user_data">
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/warning_message_row_image_view"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="5dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="10dp"
         android:layout_marginEnd="5dp"
+        android:layout_alignParentStart="true"
         android:src="@drawable/test_user2" />
 
-    <LinearLayout
+    <RelativeLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/warning_message_row_image_view"
+        android:layout_centerVertical="true"
+        android:paddingLeft="5dp">
 
         <TextView
             android:id="@+id/warning_message_row_name_text_view"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:gravity="left"
-            android:layout_weight="1"
             android:text="Shiv Kandikuppa"
+            android:textColor="#222"
             android:textSize="20sp" />
 
         <TextView
             android:id="@+id/warning_message_row_message_text_view"
+            android:layout_below="@id/warning_message_row_name_text_view"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:gravity="left"
+            android:layout_height="wrap_content"
             android:text="Hey! You got to stop using this app!"
-            android:layout_gravity="center"
             android:textSize="15sp" />
-
-    </LinearLayout>
-</LinearLayout>
+    </RelativeLayout>
+    </RelativeLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#ccc"
+        android:layout_below="@id/user_data"
+        android:layout_marginTop="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:id="@+id/TaskDivider"/>
+</RelativeLayout>
