--- a/App/FEKC/app/src/main/res/layout/warning_nav.xml
+++ b/App/FEKC/app/src/main/res/layout/warning_nav.xml
@@ -1,25 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.v7.widget.Toolbar
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="@color/colorPrimary">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_alignParentTop="true"
+            android:layout_height="25dp"
+            android:background="#000"
+            android:src="@drawable/row1"
+            android:scaleType="fitXY"/>
+
+        <RelativeLayout
             android:id="@+id/warning_nav_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:background="#f00">
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true">
 
             <include layout="@layout/warning_nav_header" />
 
-        </android.support.v7.widget.Toolbar>
+        </RelativeLayout>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_height="25dp"
+            android:background="#000"
+            android:src="@drawable/row1"
+            android:scaleType="fitXY"/>
 
-    </android.support.design.widget.AppBarLayout>
+    </RelativeLayout>
 
-</LinearLayout>
+</RelativeLayout>
