--- a/App/FEKC/app/src/main/res/values/colors.xml
+++ b/App/FEKC/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#0d497e</color>
 
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorBlack">#000</color>
 
     <color name="colorOrange">#FF9800</color>
 
